--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-          cache-dependency-path: web/package-lock.json
 
       - name: Install
         working-directory: web
-        run: npm install
+        run: npm install --no-fund --no-audit
 
       - name: Build
         working-directory: web
